--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,19 @@
 <h1>Ganban</h1>
-<% if current_user %>
-  Logged in as <%= current_user.email %>.
-  <%= link_to 'Log Out', logout_path %>
-<% else %>
-  <%= link_to 'Sign Up', signup_path %> or
-  <%= link_to 'Log In', login_path %>
-<% end %>
-<p id='notice'><%= notice %></p>
-<h1>Example</h1>
-<p>Lorem ipsum …</p>
+
+
+<div class="row" >
+  <div class="col-md-4" ></div>
+  <div class="col-md-4" >
+<h1>
+    <% if current_user %>
+      Logged in as <%= current_user.email %>.
+      <%= link_to 'Log Out', logout_path %>
+    <% else %>
+      <%= link_to 'Sign Up', signup_path %> or
+      <%= link_to 'Log In', login_path %>
+    <% end %>
+    <p id='notice'><%= notice %></p>
+</h1>
+  </div>
+  <div class="col-md-4" ></div>
+</div>
