--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,17 @@
+
+
+
+
+<div class="row" >
+  <div class="col-md-4" ></div>
+  <div class="col-md-4" >
 <h1>New User</h1>
 
-<%= render 'form', user: @user %>
+  <%= render 'form', user: @user %>
 
-<%= link_to 'Back', users_path %>
+  <%= link_to 'Back', users_path %>
+
+
+  </div>
+  <div class="col-md-4" ></div>
+</div>
