--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,110 @@
-<h1>Ganban</h1>
 
-
-<div class="row" >
-  <div class="col-md-4" ></div>
-  <div class="col-md-4" >
-<h1>
-    <% if current_user %>
-      Logged in as <%= current_user.email %>.
+<p>    <% if current_user %>
+    <!--  Logged in as <%= current_user.email %>. -->
       <%= link_to 'Log Out', logout_path %>
     <% else %>
       <%= link_to 'Sign Up', signup_path %> or
       <%= link_to 'Log In', login_path %>
     <% end %>
     <p id='notice'><%= notice %></p>
-</h1>
+
+    <style>
+.col-md-3{
+  height: 500px;
+  border-radius: 5px;
+  text-align: center;
+  background-color: powderblue;
+}
+
+</style>
+
+  <!-- Navbar on main page after login -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="">Ganban</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Logged in as <%= current_user.email %></a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="row" >
+        <div class="col-md-3" style="border: 1px solid grey;" ondrop="drop(event)" ondragover="allowDrop(event)"><h3>To Do</h3><hr>
+
+      <div class="card" draggable="true" ondragstart="dragStart(event)" id="dragtarget">
+			 <!-- <img src="img_avatar.png" alt="Avatar" style="width:100%">  -->
+			  <div class="container">
+				<h4><b>Graeme</b></h4>
+				<p>Bug Fix: Fix camera module</p>
+				<button>Delete</button><button>Edit</button>
+			  </div>
+            </div>
+			<hr>
+			<div class="card" draggable="true" ondragstart="dragStart(event)" id="dragtarget">
+			 <!-- <img src="img_avatar.png" alt="Avatar" style="width:100%">  -->
+			  <div class="container">
+				<h4><b>Graeme</b></h4>
+				<p>Add create button</p>
+			  </div>
+            </div>
+		</div>
+        <div class="col-md-3" style="border: 1px solid grey;" ondrop="drop(event)" ondragover="allowDrop(event)"><h3>In Progress</h3><hr></div>
+        <div class="col-md-3" style="border: 1px solid grey;" ondrop="drop(event)" ondragover="allowDrop(event)"><h3>Testing</h3><hr></div>
+		    <div class="col-md-3" style="border: 1px solid grey;" ondrop="drop(event)" ondragover="allowDrop(event)"><h3>Complete</h3><hr></div>
+      </div>
+
+      <script>
+          function dragStart(event) {
+            event.dataTransfer.setData("Text", event.target.id);
+            document.getElementById("demo").innerHTML = "Started to drag the p element";
+          }
+
+          function allowDrop(event) {
+            event.preventDefault();
+          }
+
+          function drop(event) {
+            event.preventDefault();
+            var data = event.dataTransfer.getData("Text");
+            event.target.appendChild(document.getElementById(data));
+            document.getElementById("demo").innerHTML = "The p element was dropped";
+          }
+      </script>
+
+
+
+    </div> <!-- /container -->
+
+
+
   </div>
   <div class="col-md-4" ></div>
 </div>
